--- a/index.html
+++ b/index.html
@@ -123,9 +123,10 @@
       <img src=".vscode/INSTAGRAM.webp" alt="instagram" width="40px" height="40px">
     </a>
     <ul class="dados">
-      <li><a href="file:///C:/Users/user/Desktop/St%C3%BAdio%20Deborah%20Pereira/sugest%C3%A3o.html">Alguma sugestão? Fale conosco!</a></li>
+      <li><a href="sugestão.html">Alguma sugestão? Fale conosco!</a></li>
     </ul>
   </footer>
 
 </body>
 </html>
+
