--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="lala.css">
   <title>Studio Déborah Pereira</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
 
   <header>
-    Studio Déborah Pereira
+    <h2></h2>Studio Déborah Pereira</h2>
   </header>
 
   <!-- MENU FIXO -->
@@ -129,4 +131,3 @@
 
 </body>
 </html>
-
