--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="lala.css">
+  <link rel="stylesheet" href="style.css">
   <title>Studio Déborah Pereira</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -131,3 +131,4 @@
 
 </body>
 </html>
+
