--- a/sugestão.html
+++ b/sugestão.html
@@ -71,10 +71,11 @@
 
       <!-- botão voltar -->
       <button>
-      <a href="file:///C:/Users/user/Desktop/St%C3%BAdio%20Deborah%20Pereira/index.html">Volte a página inicial</a></li>
+      <a href="index.html">Volte a página inicial</a></li>
     
       </button>
     </form>
   </main>
 </body>
 </html>
+
