--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <footer>
     <h2>Veja mais do nosso trabalho!</h2>
     <a href="https://www.instagram.com/studio_deborahpereira/" target="_blank">
-      <img src=".vscode/INSTAGRAM.webp" alt="instagram" width="40px" height="40px">
+      <img src="https://e7.pngegg.com/pngimages/653/46/png-clipart-instagram-icon-computer-icons-logo-symbol-instagram-instagram-text-number.png" alt="instagram" width="40px" height="40px">
     </a>
     <ul class="dados">
       <li><a href="sugestão.html">Alguma sugestão? Fale conosco!</a></li>
@@ -131,4 +131,5 @@
 
 </body>
 </html>
+
 
