--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="style.css">
   <title>Studio Déborah Pereira — Estética Feminina</title>
   <meta name="description" content="Studio Déborah Pereira — Beleza, cosméticos e cuidados pessoais em Montes Claros, MG. Cabelo, extensão de cílios, design de sobrancelha, henna labial e muito mais.">
 </head>
@@ -97,6 +98,7 @@
   </script>
 </body>
 </html>
+
 
 
 
